Changes for Perl extension Perl-Dist-WiX

0.192   To be released.
    1. Will be used to make Strawberry Perl July 2009.
    2. Windows XP is now the minimum supported Windows 
       version.
    3. Install IPC::System::Simple if autodie is installed.
    4. Clears PAR temporary directory.

0.191   Mon 06 Jul 2009
    1. Was used to make Padre Standalone beta 1.
    2. Tries to get a DefaultLanguage code for files 
       that require it.
    3. Moving the default fragments directory location under 
       temp_dir rather than output_dir.
    4. Stop CPAN.pm from following prerequisites during
       install_module.
    5. Updated CPANPLUS::Config template.   

0.190   Thu 02 Jul 2009
    1. Was used to make Strawberry Perl July 2009 
       Beta 3.
    2. Throw an exception if Archive::Zip version 1.28 
       will be installed instead. (Forcing 1.26 did not work.)
    3. A CPANPLUS::Config has been created that does similar
       things to the CPAN::Config that is installed.
    4. Building completely offline can now be successfully done.
       Because of this, CPAN::SQLite is disabled when actually
       installing modules during distribution building.
    5. Will attempt to tell you which directories need to be 
       added to the msi_directory_tree_additions parameter to 
	   Perl::Dist::WiX->new when trace is 2 or greater.
    6. Added a distropref so that certain modules will not
       be installed when building a distribution. (It is not 
       installed with the created distribution.)

0.185   Tue 23 Jun 2009
    1. Force install of Archive::Zip version 1.26 (1.28 
       has a bug in it.)
    2. Builds a list of CPAN distributions that were 
       installed as DISTRIBUTIONS.txt in the root directory
       of the install.
    3. A few more files are removed.
    4. Checks of CPAN use the CPAN passed in, not the 
       CPAN of the host perl or cpan.strawberryperl.com.
    5. Required version of Perl::Dist increased to 1.14 